compiler/testData/diagnostics/tests/dataClasses/dataClassNoName.fir.kt
// See EA-73584
<!DATA_CLASS_WITHOUT_PARAMETERS!>data class<!SYNTAX!><!> {

}<!>

// See KT-9296
data interface<!SYNTAX!><!> {

}
